* src/string.c (match): implemented =~ method. returns only true or nil.
--HG--
extra : convert_revision : 1e7bd9955aba6b258702f0ff1b14c56f252db1b5

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ yog_SOURCES = src/arg.c \
 	src/object.c \
 	src/package.c \
 	src/parser.y \
+	src/regexp.c \
 	src/stacktrace.c \
 	src/string.c \
 	src/table.c \
