* changed to post outputz.com.
--HG--
extra : convert_revision : 1a2ef2c3e7be6d727c6b7260a91dc9b335545b3b

--- a/Makefile.in
+++ b/Makefile.in
@@ -1237,6 +1237,9 @@ include/yog/inst.h: include/yog/inst.h.tmpl $(INSTS_DEF) $(INST_PY)
 Makefile.am: Makefile.am.tmpl
 	$(GEN_AM_CMD)
 
+push: 
+	PYTHONPATH=. hg push
+
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
