* Makefile.am.tmpl (generic-clean): changed to remove vgcore.*.
--HG--
extra : convert_revision : 7c2062a0d55642eaef15c7738425c166ae2073d3

--- a/Makefile.am
+++ b/Makefile.am
@@ -76,6 +76,7 @@ test-bdw:
 
 clean-generic:
 	find . -name "*.pyc" -print0 | xargs --null rm -f
+	rm -f vgcore.*
 
 src/keywords.inc: src/keywords
 	gperf $< > $@
