added test-mark-sweep-compact target.
--HG--
extra : convert_revision : bc917717fd24e67ce479d7acefb5c7a3518662a8

--- a/Makefile.am
+++ b/Makefile.am
@@ -71,6 +71,9 @@ test-copying:
 test-mark-sweep:
 	GC=mark-sweep $(TEST_CMD)
 
+test-mark-sweep-compact: 
+	GC=mark-sweep-compact $(TEST_CMD)
+
 test-bdw:
 	GC=bdw $(TEST_CMD)
 
