--- a/configure.in
+++ b/configure.in
@@ -12,6 +12,7 @@ AC_PROG_CC
 AM_PROG_CC_C_O
 AC_PROG_YACC
 AM_PROG_LEX
+AC_PROG_LIBTOOL
 
 # Checks for libraries.
 
@@ -27,6 +28,6 @@ AC_TYPE_SIZE_T
 AC_FUNC_MALLOC
 AC_CHECK_FUNCS([atexit bzero])
 
-AC_CONFIG_FILES([Makefile])
-AC_CONFIG_SUBDIRS([bdwgc onig tools/lemon])
+AC_CONFIG_FILES([Makefile src/Makefile tools/lemon/Makefile])
+AC_CONFIG_SUBDIRS([bdwgc onig])
 AC_OUTPUT
