--- a/Makefile.in
+++ b/Makefile.in
@@ -18,5 +18,21 @@ all: $(YOG)
 proto: 
 	python tools/update_prototype.py
 
+TEST_CMD = py.test
+
+test: 
+	make test-copying
+	make test-mark-sweep
+	make test-mark-sweep-compact
+	make test-bdw
+test-copying: 
+	GC=copying $(TEST_CMD)
+test-mark-sweep: 
+	GC=mark-sweep $(TEST_CMD)
+test-mark-sweep-compact: 
+	GC=mark-sweep-compact $(TEST_CMD)
+test-bdw:
+	GC=bdw $(TEST_CMD)
+
 am--refresh:
 	@:
