added basic files for mark-sweep-compact GC.
--HG--
extra : convert_revision : f8ed2812fd6943f3d92886f962784b00bb7a58a4

--- a/tests/mark-sweep-compact/Makefile.am
+++ b/tests/mark-sweep-compact/Makefile.am
@@ -1,8 +1,8 @@
 
-SRC_DIR = $(top_srcdir)/src
+YOG_DIR = ../..
 
 bin_PROGRAMS = test
-test_SOURCES = main.c
+test_SOURCES = main.c $(YOG_DIR)/src/gc/mark-sweep-compact.c
 
-test_CFLAGS = -Wall
+test_CFLAGS = -Wall -I$(YOG_DIR)/include
 test_LFLAGS = -lcunit
