implemented YogMarkSweepCompact_gc.
--HG--
extra : convert_revision : bfae37e29907d41bf9e3738c12dbd6ab82fca0a6

--- a/tests/mark-sweep-compact/Makefile.am
+++ b/tests/mark-sweep-compact/Makefile.am
@@ -6,3 +6,6 @@ test_SOURCES = main.c $(YOG_DIR)/src/gc/mark-sweep-compact.c
 
 test_CFLAGS = -Wall -I$(YOG_DIR)/include
 test_LFLAGS = -lcunit
+
+proto: 
+	cd ../../ && make proto
