--- a/tests/mark-sweep-compact/Makefile.in
+++ b/tests/mark-sweep-compact/Makefile.in
@@ -585,6 +585,9 @@ uninstall-am: uninstall-binPROGRAMS
 	mostlyclean-compile mostlyclean-generic pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am uninstall-binPROGRAMS
 
+
+proto: 
+	cd ../../ && make proto
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
