--- a/Makefile.in
+++ b/Makefile.in
@@ -9,13 +9,11 @@ ONIG_LIB = $(ONIG_DIR)/libonig.la
 BDW_DIR = bdwgc
 BDW_LIB = $(BDW_DIR)/libgc.la
 
-all: $(YOG)
-
-$(YOG): 
+all: 
 	(cd $(ONIG_DIR); make)
 	(cd $(BDW_DIR); make)
 	(cd $(YOG_DIR); make)
-	./libtool --tag=CC --mode=link $(CC) -o $@ $(YOG_LIB) $(ONIG_LIB) $(BDW_LIB)
+	./libtool --tag=CC --mode=link $(CC) -o $(YOG) $(YOG_LIB) $(ONIG_LIB) $(BDW_LIB)
 
 proto: 
 	python tools/update_prototype.py
