--- a/tests/mark-sweep-compact/Makefile.am
+++ b/tests/mark-sweep-compact/Makefile.am
@@ -2,10 +2,7 @@
 YOG_DIR = ../..
 
 bin_PROGRAMS = test
-test_SOURCES = main.c $(YOG_DIR)/src/gc/mark-sweep-compact.c
+test_SOURCES = $(YOG_DIR)/src/gc/mark-sweep-compact.c
 
-test_CFLAGS = -Wall -I$(YOG_DIR)/include
+test_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST
 test_LFLAGS = -lcunit
-
-proto: 
-	cd ../../ && make proto
