--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,13 +57,14 @@ am_libyog_la_OBJECTS = libyog_la-arg.lo libyog_la-array.lo \
 	libyog_la-builtins.lo libyog_la-code.lo libyog_la-compile.lo \
 	libyog_la-encoding.lo libyog_la-error.lo \
 	libyog_la-exception.lo libyog_la-frame.lo \
-	libyog_la-function.lo libyog_la-inst.lo libyog_la-int.lo \
-	libyog_la-klass.lo libyog_la-lexer.lo libyog_la-main.lo \
-	libyog_la-method.lo libyog_la-nil.lo libyog_la-object.lo \
-	libyog_la-package.lo libyog_la-parser.lo libyog_la-regexp.lo \
-	libyog_la-stacktrace.lo libyog_la-string.lo libyog_la-table.lo \
-	libyog_la-thread.lo libyog_la-token.lo libyog_la-value.lo \
-	libyog_la-vm.lo libyog_la-mark-sweep-compact.lo
+	libyog_la-function.lo libyog_la-copying.lo \
+	libyog_la-mark-sweep-compact.lo libyog_la-inst.lo \
+	libyog_la-int.lo libyog_la-klass.lo libyog_la-lexer.lo \
+	libyog_la-main.lo libyog_la-method.lo libyog_la-nil.lo \
+	libyog_la-object.lo libyog_la-package.lo libyog_la-parser.lo \
+	libyog_la-regexp.lo libyog_la-stacktrace.lo \
+	libyog_la-string.lo libyog_la-table.lo libyog_la-thread.lo \
+	libyog_la-token.lo libyog_la-value.lo libyog_la-vm.lo
 libyog_la_OBJECTS = $(am_libyog_la_OBJECTS)
 libyog_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(libyog_la_CFLAGS) \
@@ -216,6 +217,8 @@ libyog_la_SOURCES = arg.c \
 	exception.c \
 	frame.c \
 	function.c \
+	gc/copying.c \
+	gc/mark-sweep-compact.c \
 	inst.c \
 	int.c \
 	klass.c \
@@ -233,7 +236,7 @@ libyog_la_SOURCES = arg.c \
 	thread.c \
 	token.c \
 	value.c \
-	vm.c gc/mark-sweep-compact.c
+	vm.c
 
 libyog_la_CFLAGS = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
 INSTS_DEF = insts.def
@@ -319,6 +322,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-builtins.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-code.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-compile.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-copying.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-encoding.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-error.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-exception.Plo@am__quote@
@@ -456,6 +460,20 @@ libyog_la-function.lo: function.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-function.lo `test -f 'function.c' || echo '$(srcdir)/'`function.c
 
+libyog_la-copying.lo: gc/copying.c
+@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-copying.lo -MD -MP -MF $(DEPDIR)/libyog_la-copying.Tpo -c -o libyog_la-copying.lo `test -f 'gc/copying.c' || echo '$(srcdir)/'`gc/copying.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_la-copying.Tpo $(DEPDIR)/libyog_la-copying.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gc/copying.c' object='libyog_la-copying.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-copying.lo `test -f 'gc/copying.c' || echo '$(srcdir)/'`gc/copying.c
+
+libyog_la-mark-sweep-compact.lo: gc/mark-sweep-compact.c
+@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-mark-sweep-compact.lo -MD -MP -MF $(DEPDIR)/libyog_la-mark-sweep-compact.Tpo -c -o libyog_la-mark-sweep-compact.lo `test -f 'gc/mark-sweep-compact.c' || echo '$(srcdir)/'`gc/mark-sweep-compact.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_la-mark-sweep-compact.Tpo $(DEPDIR)/libyog_la-mark-sweep-compact.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gc/mark-sweep-compact.c' object='libyog_la-mark-sweep-compact.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-mark-sweep-compact.lo `test -f 'gc/mark-sweep-compact.c' || echo '$(srcdir)/'`gc/mark-sweep-compact.c
+
 libyog_la-inst.lo: inst.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-inst.lo -MD -MP -MF $(DEPDIR)/libyog_la-inst.Tpo -c -o libyog_la-inst.lo `test -f 'inst.c' || echo '$(srcdir)/'`inst.c
 @am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_la-inst.Tpo $(DEPDIR)/libyog_la-inst.Plo
@@ -581,13 +599,6 @@ libyog_la-vm.lo: vm.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='vm.c' object='libyog_la-vm.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-vm.lo `test -f 'vm.c' || echo '$(srcdir)/'`vm.c
-
-libyog_la-mark-sweep-compact.lo: gc/mark-sweep-compact.c
-@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-mark-sweep-compact.lo -MD -MP -MF $(DEPDIR)/libyog_la-mark-sweep-compact.Tpo -c -o libyog_la-mark-sweep-compact.lo `test -f 'gc/mark-sweep-compact.c' || echo '$(srcdir)/'`gc/mark-sweep-compact.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_la-mark-sweep-compact.Tpo $(DEPDIR)/libyog_la-mark-sweep-compact.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gc/mark-sweep-compact.c' object='libyog_la-mark-sweep-compact.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-mark-sweep-compact.lo `test -f 'gc/mark-sweep-compact.c' || echo '$(srcdir)/'`gc/mark-sweep-compact.c
 
 .y.c:
 	$(am__skipyacc) $(SHELL) $(YLWRAP) $< y.tab.c $@ y.tab.h $*.h y.output $*.output -- $(YACCCOMPILE)
