fixed a bug to refer dead pointer.
--HG--
extra : convert_revision : 4e41a1ac6d7c995b33b702596baa3068912c603e

--- a/Makefile.in
+++ b/Makefile.in
@@ -15,6 +15,11 @@ all:
 	(cd $(YOG_DIR); make)
 	./libtool --tag=CC --mode=link $(CC) -o $(YOG) $(YOG_LIB) $(ONIG_LIB) $(BDW_LIB)
 
+clean: 
+	cd $(ONIG_DIR) && make clean
+	cd $(BDW_DIR) && make clean
+	cd $(YOG_DIR) && make clean
+
 proto: 
 	python tools/update_prototype.py
 
