moved code for mark-sweep GC to src/gc/mark-sweep.c.
--HG--
extra : convert_revision : 533a30891fb56a3ff9acdd06fd96d00119d0a4e7

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,7 @@ libyog_la_SOURCES = arg.c \
 	function.c \
 	gc/copying.c \
 	gc/mark-sweep-compact.c \
+	gc/mark-sweep.c \
 	inst.c \
 	int.c \
 	klass.c \
