--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -58,13 +58,14 @@ am_libyog_la_OBJECTS = libyog_la-arg.lo libyog_la-array.lo \
 	libyog_la-encoding.lo libyog_la-error.lo \
 	libyog_la-exception.lo libyog_la-frame.lo \
 	libyog_la-function.lo libyog_la-copying.lo \
-	libyog_la-mark-sweep-compact.lo libyog_la-inst.lo \
-	libyog_la-int.lo libyog_la-klass.lo libyog_la-lexer.lo \
-	libyog_la-main.lo libyog_la-method.lo libyog_la-nil.lo \
-	libyog_la-object.lo libyog_la-package.lo libyog_la-parser.lo \
-	libyog_la-regexp.lo libyog_la-stacktrace.lo \
-	libyog_la-string.lo libyog_la-table.lo libyog_la-thread.lo \
-	libyog_la-token.lo libyog_la-value.lo libyog_la-vm.lo
+	libyog_la-mark-sweep-compact.lo libyog_la-mark-sweep.lo \
+	libyog_la-inst.lo libyog_la-int.lo libyog_la-klass.lo \
+	libyog_la-lexer.lo libyog_la-main.lo libyog_la-method.lo \
+	libyog_la-nil.lo libyog_la-object.lo libyog_la-package.lo \
+	libyog_la-parser.lo libyog_la-regexp.lo \
+	libyog_la-stacktrace.lo libyog_la-string.lo libyog_la-table.lo \
+	libyog_la-thread.lo libyog_la-token.lo libyog_la-value.lo \
+	libyog_la-vm.lo
 libyog_la_OBJECTS = $(am_libyog_la_OBJECTS)
 libyog_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(libyog_la_CFLAGS) \
@@ -219,6 +220,7 @@ libyog_la_SOURCES = arg.c \
 	function.c \
 	gc/copying.c \
 	gc/mark-sweep-compact.c \
+	gc/mark-sweep.c \
 	inst.c \
 	int.c \
 	klass.c \
@@ -334,6 +336,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-lexer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-main.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-mark-sweep-compact.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-mark-sweep.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-method.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-nil.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-object.Plo@am__quote@
@@ -473,6 +476,13 @@ libyog_la-mark-sweep-compact.lo: gc/mark-sweep-compact.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gc/mark-sweep-compact.c' object='libyog_la-mark-sweep-compact.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-mark-sweep-compact.lo `test -f 'gc/mark-sweep-compact.c' || echo '$(srcdir)/'`gc/mark-sweep-compact.c
+
+libyog_la-mark-sweep.lo: gc/mark-sweep.c
+@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-mark-sweep.lo -MD -MP -MF $(DEPDIR)/libyog_la-mark-sweep.Tpo -c -o libyog_la-mark-sweep.lo `test -f 'gc/mark-sweep.c' || echo '$(srcdir)/'`gc/mark-sweep.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_la-mark-sweep.Tpo $(DEPDIR)/libyog_la-mark-sweep.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gc/mark-sweep.c' object='libyog_la-mark-sweep.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-mark-sweep.lo `test -f 'gc/mark-sweep.c' || echo '$(srcdir)/'`gc/mark-sweep.c
 
 libyog_la-inst.lo: inst.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-inst.lo -MD -MP -MF $(DEPDIR)/libyog_la-inst.Tpo -c -o libyog_la-inst.lo `test -f 'inst.c' || echo '$(srcdir)/'`inst.c
