moved code using BoehmGC to src/gc/bdw.c.
--HG--
extra : convert_revision : 06b40baa95d5c14ef906ef728d70f50d5ff4caf6

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,7 @@ libyog_la_SOURCES = arg.c \
 	exception.c \
 	frame.c \
 	function.c \
+	gc/bdw.c \
 	gc/copying.c \
 	gc/mark-sweep-compact.c \
 	gc/mark-sweep.c \
