--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,7 +57,7 @@ am_libyog_la_OBJECTS = libyog_la-arg.lo libyog_la-array.lo \
 	libyog_la-builtins.lo libyog_la-code.lo libyog_la-compile.lo \
 	libyog_la-encoding.lo libyog_la-error.lo \
 	libyog_la-exception.lo libyog_la-frame.lo \
-	libyog_la-function.lo libyog_la-copying.lo \
+	libyog_la-function.lo libyog_la-bdw.lo libyog_la-copying.lo \
 	libyog_la-mark-sweep-compact.lo libyog_la-mark-sweep.lo \
 	libyog_la-inst.lo libyog_la-int.lo libyog_la-klass.lo \
 	libyog_la-lexer.lo libyog_la-main.lo libyog_la-method.lo \
@@ -218,6 +218,7 @@ libyog_la_SOURCES = arg.c \
 	exception.c \
 	frame.c \
 	function.c \
+	gc/bdw.c \
 	gc/copying.c \
 	gc/mark-sweep-compact.c \
 	gc/mark-sweep.c \
@@ -318,6 +319,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-arg.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-array.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-bdw.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-binary.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-block.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libyog_la-bool.Plo@am__quote@
@@ -462,6 +464,13 @@ libyog_la-function.lo: function.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='function.c' object='libyog_la-function.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-function.lo `test -f 'function.c' || echo '$(srcdir)/'`function.c
+
+libyog_la-bdw.lo: gc/bdw.c
+@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-bdw.lo -MD -MP -MF $(DEPDIR)/libyog_la-bdw.Tpo -c -o libyog_la-bdw.lo `test -f 'gc/bdw.c' || echo '$(srcdir)/'`gc/bdw.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libyog_la-bdw.Tpo $(DEPDIR)/libyog_la-bdw.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gc/bdw.c' object='libyog_la-bdw.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -c -o libyog_la-bdw.lo `test -f 'gc/bdw.c' || echo '$(srcdir)/'`gc/bdw.c
 
 libyog_la-copying.lo: gc/copying.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libyog_la_CFLAGS) $(CFLAGS) -MT libyog_la-copying.lo -MD -MP -MF $(DEPDIR)/libyog_la-copying.Tpo -c -o libyog_la-copying.lo `test -f 'gc/copying.c' || echo '$(srcdir)/'`gc/copying.c
