implemented testing framework.
--HG--
extra : convert_revision : aaaa106ee12778a814442105d3ac47ebbdc30967

--- a/configure.ac
+++ b/configure.ac
@@ -29,7 +29,9 @@ AC_CHECK_FUNCS([atexit bzero])
 
 AC_CONFIG_FILES([Makefile src/Makefile tools/lemon/Makefile])
 if test "${with_cunit}" = "yes"; then
-    AC_CONFIG_FILES([tests/copying/Makefile tests/mark-sweep-compact/Makefile])
+    AC_CONFIG_FILES([tests/copying/Makefile 
+                     tests/mark-sweep-compact/Makefile
+                     tests/generational/Makefile])
 fi
 AC_CONFIG_SUBDIRS([bdwgc onig])
 AC_OUTPUT
